# miniextendr

./: .gitignore  .ignore  Cargo.toml  NOTES.md  README.md  libgcc_mock.ps1  rust-toolchain.toml  rustfmt.toml  setenv.ps1
.cargo/: config.toml
r-sys/: Cargo.toml  allowlist.txt  build.rs  r-bindings.rs  wrapper.h
r-sys/src/: lib.rs  main.rs
rapi/: Cargo.toml
rapi-macros/: Cargo.toml
rapi-macros/src/: lib.rs
rapi/src/: adv_r_c_chapter.rs  lib.rs  main.rs  protect.rs  r_embedded_impl.rs  r_panic_handler.rs  sexp.rs
rsys/: Cargo.toml  README.md  allowlist.txt  anonymous_items.txt  build.rs  macros_and_skipped_ranges.txt  r-bindings.rs  wrapper.h
rsys/src/: lib.rs  main.rs  protect_macros.rs  r_function_like_macros.rs
xtask/: Cargo.toml  README.md  build.rs
xtask/src/: allowlist.rs  copy_r_headers.rs  find_macros.rs  libgcc_mock.rs  main.rs
